--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodeapp.js"
+    "start": "nodeapp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
